src/test/ui/issues/issue-58857.stderr
error: negative trait bounds are not supported
  --> $DIR/issue-58857.rs:4:7
   |
LL | impl<A: !Valid> Conj<A>{}
   |       ^^^^^^^^ negative trait bounds are not supported
   = help: remove the trait bound

error: aborting due to previous error

